--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,8 +158,8 @@ span.highlight {
 .grid-container {
   /*columns: 3 150px; */
   /* columns: 3 auto; */
-  /* columns: 2 auto; */
-  width: 150px;
+  columns: 2 auto;
+  /* width: 150px; */
   column-gap: 1.5rem;
   width: 100%;
   margin: 0 auto;
